# hermes-memory-lancedb

./: .gitignore  README.md  pyproject.toml
athena_memory/: __init__.py  chunker.py  cli.py  compactor.py  dedup.py  embedders.py  import_md.py  lifecycle.py  noise_proto.py  query.py  scopes.py  sessions.py  smart_metadata.py  temporal.py
athena_memory/backends/: __init__.py  lancedb_store.py
athena_memory/reflection/: event_store.py  mapped_metadata.py  ranking.py  retry.py  slices.py  store.py
hermes_memory_lancedb/: __init__.py  admission.py  auto_capture.py  cli.py  embedders.py  lifecycle.py  observability.py  temporal.py
hermes_memory_lancedb/backends/: base.py  pgvector.py
hermes_memory_lancedb/reflection/: __init__.py  item_store.py  metadata.py
tests/: test_backend_pgvector_live.py  test_p1.py  test_p2.py  test_p3.py  test_p4.py  test_p5.py  test_v110.py  test_v120.py
