[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-memory-lancedb"
version = "1.4.0"
description = "LanceDB vector memory plugin for Hermes agents — multi-scope isolation, multi-provider embeddings, chunker, batch dedup, admission control, smart metadata, noise prototypes, cross-encoder rerank, MMR diversity, LLM Smart Extraction, 3-tier memory"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.20.0",
    "tantivy>=0.21.0",
    "openai>=1.0.0",
    "pyarrow>=12.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Repository = "https://github.com/TheophilusChinomona/hermes-memory-lancedb"

[tool.hatch.build.targets.wheel]
packages = ["hermes_memory_lancedb"]
