[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athena-memory"
version = "3.0.0"
description = "Pluggable memory plugin for Hermes agents (Athena fork) — LanceDB and Postgres+pgvector+pg_search backends; multi-provider embeddings, cross-encoder rerank, MMR diversity, multi-scope isolation, LLM smart extraction, reflection subsystem, management CLI, per-query observability"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyarrow>=12.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
    "portalocker>=2.7.0",
]

[project.optional-dependencies]
lancedb = [
    "lancedb>=0.20.0",
    "tantivy>=0.21.0",
]
pgvector = [
    "psycopg[binary,pool]>=3.2",
]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
athena-memory = "athena_memory.cli:main"
# Backwards-compat: the old console script name keeps working for one major version.
hermes-memory-lancedb = "athena_memory.cli:main"

[project.urls]
Repository = "https://gitlab.com/chinomonatinotenda19/athena-memory"
Mirror = "https://github.com/TheophilusChinomona/athena-memory"

[tool.hatch.build.targets.wheel]
packages = ["athena_memory", "hermes_memory_lancedb"]
